docs/api/qiskit/0.19/qiskit.finance.data_providers.RandomDataProvider.mdx
---
title: RandomDataProvider (v0.19)
description: API reference for qiskit.finance.data_providers.RandomDataProvider in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.finance.data_providers.RandomDataProvider
---

# RandomDataProvider

<Class id="qiskit.finance.data_providers.RandomDataProvider" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/finance/data_providers/random_data_provider.py" signature="RandomDataProvider(tickers=None, stockmarket=StockMarket.RANDOM, start=datetime.datetime(2016, 1, 1, 0, 0), end=datetime.datetime(2016, 1, 30, 0, 0), seed=None)" modifiers="class">
  Pseudo-randomly generated mock stock-market data provider.

  Initializer :type tickers: `Union`\[`str`, `List`\[`str`], `None`] :param tickers: tickers :type stockmarket: [`StockMarket`](qiskit.finance.data_providers.StockMarket "qiskit.finance.data_providers._base_data_provider.StockMarket") :param stockmarket: RANDOM :type start: \<module ‘datetime’ from ‘/usr/lib/python3.7/datetime.py’> :param start: first data point :type end: \<module ‘datetime’ from ‘/usr/lib/python3.7/datetime.py’> :param end: last data point precedes this date :type seed: `Optional`\[`int`] :param seed: shall a seed be used?

  **Raises**

  [**QiskitFinanceError**](qiskit.finance.QiskitFinanceError "qiskit.finance.QiskitFinanceError") – provider doesn’t support stock market value

  ## Methods

  <span id="randomdataprovider-get-coordinates" />

  ### get\_coordinates

  <Function id="qiskit.finance.data_providers.RandomDataProvider.get_coordinates" signature="RandomDataProvider.get_coordinates()">
    Returns random coordinates for visualisation purposes.
  </Function>

  <span id="randomdataprovider-get-covariance-matrix" />

  ### get\_covariance\_matrix

  <Function id="qiskit.finance.data_providers.RandomDataProvider.get_covariance_matrix" signature="RandomDataProvider.get_covariance_matrix()">
    Returns the covariance matrix.

    **Returns**

    an asset-to-asset covariance matrix.

    **Return type**

    numpy.ndarray

    **Raises**

    [**QiskitFinanceError**](qiskit.finance.QiskitFinanceError "qiskit.finance.QiskitFinanceError") – no data loaded
  </Function>

  <span id="randomdataprovider-get-mean-vector" />

  ### get\_mean\_vector

  <Function id="qiskit.finance.data_providers.RandomDataProvider.get_mean_vector" signature="RandomDataProvider.get_mean_vector()">
    Returns a vector containing the mean value of each asset.

    **Returns**

    a per-asset mean vector.

    **Return type**

    numpy.ndarray

    **Raises**

    [**QiskitFinanceError**](qiskit.finance.QiskitFinanceError "qiskit.finance.QiskitFinanceError") – no data loaded
  </Function>

  <span id="randomdataprovider-get-period-return-covariance-matrix" />

  ### get\_period\_return\_covariance\_matrix

  <Function id="qiskit.finance.data_providers.RandomDataProvider.get_period_return_covariance_matrix" signature="RandomDataProvider.get_period_return_covariance_matrix()">
    Returns a vector containing the mean value of each asset.

    **Returns**

    a per-asset mean vector.

    **Return type**

    numpy.ndarray

    **Raises**

    [**QiskitFinanceError**](qiskit.finance.QiskitFinanceError "qiskit.finance.QiskitFinanceError") – no data loaded
  </Function>

  <span id="randomdataprovider-get-period-return-mean-vector" />

  ### get\_period\_return\_mean\_vector

  <Function id="qiskit.finance.data_providers.RandomDataProvider.get_period_return_mean_vector" signature="RandomDataProvider.get_period_return_mean_vector()">
    Returns a vector containing the mean value of each asset.

    **Returns**

    a per-asset mean vector.

    **Return type**

    numpy.ndarray

    **Raises**

    [**QiskitFinanceError**](qiskit.finance.QiskitFinanceError "qiskit.finance.QiskitFinanceError") – no data loaded
  </Function>

  <span id="randomdataprovider-get-similarity-matrix" />

  ### get\_similarity\_matrix

  <Function id="qiskit.finance.data_providers.RandomDataProvider.get_similarity_matrix" signature="RandomDataProvider.get_similarity_matrix()">
    Returns time-series similarity matrix computed using dynamic time warping.

    **Returns**

    an asset-to-asset similarity matrix.

    **Return type**

    numpy.ndarray

    **Raises**

    [**QiskitFinanceError**](qiskit.finance.QiskitFinanceError "qiskit.finance.QiskitFinanceError") – no data loaded
  </Function>

  <span id="randomdataprovider-run" />

  ### run

  <Function id="qiskit.finance.data_providers.RandomDataProvider.run" signature="RandomDataProvider.run()">
    Generates data pseudo-randomly, thus enabling get\_similarity\_matrix and get\_covariance\_matrix methods in the base class.
  </Function>
</Class>

